care-australia-uat/force-app/main/default/objects/CAREgiftsXmas2021__c/CAREgiftsXmas2021__c.object-meta.xml
<CustomObject>
    <label>CAREgiftsXmas2021</label>
    <nameField>
        <label>CAREgiftsXmas2021</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CAREgiftsXmas2021</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>