care-australia-uat/force-app/main/default/objects/CAREgiftsXmas2021__c/fields/AUS_Code__c.field-meta.xml
<CustomField>
    <fullName>AUS_Code__c</fullName>
    <label>AUS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>