care-australia-uat/force-app/main/default/objects/CAREgiftsXmas2021__c/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <label>Campaign Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>