care-australia-uat/force-app/main/default/objects/CAREgiftsXmas2021__c/fields/DM_Donor__c.field-meta.xml
<CustomField>
    <fullName>DM_Donor__c</fullName>
    <label>DM_Donor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>