care-australia-uat/force-app/main/default/objects/CAREgiftsXmas2021__c/fields/Dual__c.field-meta.xml
<CustomField>
    <fullName>Dual__c</fullName>
    <label>Dual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>