care-australia-uat/force-app/main/default/objects/CAREgiftsXmas2021__c/fields/Existing_Donor__c.field-meta.xml
<CustomField>
    <fullName>Existing_Donor__c</fullName>
    <label>Existing_Donor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>