care-australia-uat/force-app/main/default/objects/CAREgiftsXmas2021__c/fields/First_Channel_NewDonor__c.field-meta.xml
<CustomField>
    <fullName>First_Channel_NewDonor__c</fullName>
    <label>First_Channel_NewDonor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>