care-australia-uat/force-app/main/default/objects/CAREgiftsXmas2021__c/fields/First_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Gift_Date__c</fullName>
    <label>First Gift Date</label>
    <type>Date</type>
</CustomField>