care-australia-uat/force-app/main/default/objects/CAREgiftsXmas2021__c/fields/new_donor__c.field-meta.xml
<CustomField>
    <fullName>new_donor__c</fullName>
    <label>new_donor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>