care-australia-uat/force-app/main/default/objects/CAREgiftsXmas2021__c/fields/Second_Gift__c.field-meta.xml
<CustomField>
    <fullName>Second_Gift__c</fullName>
    <label>Second_Gift</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>