care-australia-uat/force-app/main/default/objects/CAREgiftsXmas2021__c/fields/SF_Constituent_Id__c.field-meta.xml
<CustomField>
    <fullName>SF_Constituent_Id__c</fullName>
    <label>SF Constituent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>