care-australia-uat/force-app/main/default/objects/CAREgiftsXmas2021__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SF_Constituent_Id__c</columns>
    <columns>Type__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Primary_Campaign_Source__c</columns>
    <columns>First_Gift_Date__c</columns>
    <columns>AUS_Code__c</columns>
    <columns>Close_Date__c</columns>
    <columns>First_Gift_Only__c</columns>
    <columns>Total_Number_of_Gifts__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>